<resources>
    <string name="app_name">OnlyFriends</string>

    // Authentification

    <string name="create">Créer un compte</string>
    <string name="connect">Se connecter</string>
    <string name="email">Email</string>
    <string name="password">Mot de Passe</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="noAccount">Vous n\'avez pas de compte</string>
    <string name="alreadyAccount">Vous avez déja un compte</string>
    <string name="valider">Valider</string>
    <string name="validForm">Le formulaire est valide</string>
    <string name="invalidForm">Le formulaire est invalide</string>

    // Accueil

    <string name="home">Accueil</string>
    <string name="search">Rechercher</string>
    <string name="account">Votre Compte</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Account

    <string name="pictures">Publication</string>
    <string name="followers">Abonnés</string>
    <string name="following">Abonnements</string>
    <string name="subscribe">S\'abonner</string>

    // Add

    <string name="takePicture">Prendre une photo</string>
    <string name="choisePicture">Ajouter une photo</string>
    <string name="logout">Se déconnecter</string>


</resources>