<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3F51B5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nbPublication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/publication"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/publication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/pictures"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/nbPublication" />

        <TextView
            android:id="@+id/nbFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/nbPublication"
            app:layout_constraintTop_toTopOf="@+id/nbPublication" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            app:layout_constraintEnd_toEndOf="@+id/nbFollowers"
            app:layout_constraintStart_toStartOf="@+id/nbFollowers"
            app:layout_constraintTop_toTopOf="@+id/publication" />

        <TextView
            android:id="@+id/nbFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/nbFollowers"
            app:layout_constraintTop_toTopOf="@+id/nbFollowers" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="@+id/nbFollowing"
            app:layout_constraintStart_toStartOf="@+id/nbFollowing"
            app:layout_constraintTop_toTopOf="@+id/publication" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>